Commit latest update. Sorting and checks for lowest item price.